...
            clearCode = true,
            lockCode = r.attemptsLeft == 0,
            attemptsLeft = r.attemptsLeft,
        )
        r.httpStatus == 410 -> PhoneErrorUi("That code has expired. Send a new one.", clearCode = true, resendInSec = 0, lockCode = true)
        r.httpStatus == 429 && r.code == AuthErrors.TOO_MANY_ATTEMPTS ->
            PhoneErrorUi("Too many attempts. Send a new code.", clearCode = true, resendInSec = CodeLimits.retryAfterSec(r).toInt(), lockCode = true)
        r.httpStatus == 429 -> {
            val sec = CodeLimits.retryAfterSec(r).toInt()
            PhoneErrorUi("Too many codes requested. Try again in ${waitText(sec)}.", resendInSec = sec)
        }
        r.httpStatus == 503 -> PhoneErrorUi("Couldn't send the SMS right now. Try again in a minute.", resendInSec = 0)
        else -> PhoneErrorUi("Something went wrong (${r.code})")
...
